Buildable configs added; moved app to /src

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <meta property="og:url" content="">
   <meta property="og:image" content="">
 
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/style.css">
+  <!-- <link rel="stylesheet" href="css/normalize.css"> -->
+  <!-- <link rel="stylesheet" href="css/style.css"> -->
 </head>
 
 <body>
@@ -30,7 +30,7 @@
   </div>
 
   <!-- Scripts -->
-  <script src="bundle.js"></script>
+  <!-- <script src="bundle.js"></script> -->
 
 </body>
 </html>
