--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <div class="wrapper">
     <div class="container">
       <form id="search-form">
-        <label for="username">Enter GitHub username:</label><br>
+        <label for="username">Enter a GitHub username:</label><br>
         <input id="username" type="text" name="username" required>
         <input type="submit" value="Search">
       </form>
